deploy/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: softwarefoundry-dev
spec:
  selector:
    app: softwarefoundry-dev
  ports:
  - protocol: TCP
    port: 3000
    targetPort: web
    name: web
