deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: softwarefoundry
spec:
  selector:
    app: softwarefoundry
  ports:
  - protocol: TCP
    port: 3000
    targetPort: web
    name: web
