deploy/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: softwarefoundry
  namespace: alyssa
  annotations:
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - softwarefoundry.com
    secretName: softwarefoundry-cert
  rules:
  - host: softwarefoundry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: softwarefoundry
            port:
              number: 3000
